3_4_kuber-homeworks_updating_app/code/task_3/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v1
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v1
  template:
    metadata:
      labels:
        app: nginx-v1
    spec: 
      containers:
      - name: nginx
        image: nginx:1.26
        ports:
        - containerPort: 80        
        volumeMounts:
          - name: nginx-web-page
            mountPath: /usr/share/nginx/html/
            readOnly: true
      volumes:
      - name: nginx-web-page
        configMap:
          name: nginx-configmap-v1

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment-v2
  namespace: netology
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-v2
  template:
    metadata:
      labels:
        app: nginx-v2
    spec: 
      containers:
      - name: nginx
        image: nginx:1.26
        ports:
        - containerPort: 80        
        volumeMounts:
          - name: nginx-web-page
            mountPath: /usr/share/nginx/html/
            readOnly: true
      volumes:
      - name: nginx-web-page
        configMap:
          name: nginx-configmap-v2
