3_4_kuber-homeworks_updating_app/code/task_3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: netology
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nginx-app.ru
    http:
      paths:
      - path: /v1
        pathType: Prefix
        backend:
          service:
            name: nginx-svc-v1
            port:
              number: 80
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: nginx-svc-v2
            port:
              number: 80
